add_executable (test_list_create_destroy list_create_destroy.cc)
add_executable (test_list_push_front1 list_push_front1.cc)
add_executable (test_list_push_back1 list_push_back1.cc)
add_executable (test_list_push_front2 list_push_front2.cc)
add_executable (test_list_push_back2 list_push_back2.cc)
add_executable (test_list_iterate list_iterate.cc)
add_executable (test_list_erase list_erase.cc)

target_link_libraries (test_list_create_destroy ilias_async)
target_link_libraries (test_list_push_front1 ilias_async)
target_link_libraries (test_list_push_back1 ilias_async)
target_link_libraries (test_list_push_front2 ilias_async)
target_link_libraries (test_list_push_back2 ilias_async)
target_link_libraries (test_list_iterate ilias_async)
target_link_libraries (test_list_erase ilias_async)

add_test (test_list_create_destroy test_list_create_destroy)
add_test (test_list_push_front1 test_list_push_front1)
add_test (test_list_push_back1 test_list_push_back1)
add_test (test_list_push_front2 test_list_push_front2)
add_test (test_list_push_back2 test_list_push_back2)
add_test (test_list_iterate test_list_iterate)
add_test (test_list_erase test_list_erase)
