add_executable (test_list_create_destroy list_create_destroy.cc)
add_executable (test_list_empty_iterate list_empty_iterate.cc)
add_executable (test_list_push_front1 list_push_front1.cc)
add_executable (test_list_push_back1 list_push_back1.cc)
add_executable (test_list_push_front2 list_push_front2.cc)
add_executable (test_list_push_back2 list_push_back2.cc)
add_executable (test_list_iterate list_iterate.cc)
add_executable (test_list_erase list_erase.cc)
add_executable (test_list_clear list_clear.cc)
add_executable (test_list_insert list_insert.cc)
add_executable (test_list_conc_pushback list_conc_pushback.cc)
add_executable (test_list_conc_pushfront list_conc_pushfront.cc)
add_executable (test_list_conc_iterate list_conc_iterate.cc)

target_link_libraries (test_list_create_destroy ilias_async)
target_link_libraries (test_list_empty_iterate ilias_async)
target_link_libraries (test_list_push_front1 ilias_async)
target_link_libraries (test_list_push_back1 ilias_async)
target_link_libraries (test_list_push_front2 ilias_async)
target_link_libraries (test_list_push_back2 ilias_async)
target_link_libraries (test_list_iterate ilias_async)
target_link_libraries (test_list_erase ilias_async)
target_link_libraries (test_list_clear ilias_async)
target_link_libraries (test_list_insert ilias_async)
target_link_libraries (test_list_conc_pushback ilias_async)
target_link_libraries (test_list_conc_pushfront ilias_async)
target_link_libraries (test_list_conc_iterate ilias_async)

add_test (test_list_create_destroy test_list_create_destroy)
add_test (test_list_empty_iterate test_list_empty_iterate)
add_test (test_list_push_front1 test_list_push_front1)
add_test (test_list_push_back1 test_list_push_back1)
add_test (test_list_push_front2 test_list_push_front2)
add_test (test_list_push_back2 test_list_push_back2)
add_test (test_list_iterate test_list_iterate)
add_test (test_list_erase test_list_erase)
add_test (test_list_clear test_list_clear)
add_test (test_list_insert test_list_insert)
add_test (test_list_conc_pushback test_list_conc_pushback)
add_test (test_list_conc_pushfront test_list_conc_pushfront)
add_test (test_list_conc_iterate test_list_conc_iterate)
