add_executable (test_llq_empty llq_empty.cc)
add_executable (test_llq_pushback llq_pushback.cc)
add_executable (test_llq_pushfront llq_pushfront.cc)
add_executable (test_llq_sequence llq_sequence.cc)
add_executable (test_llq_frontsequence llq_frontsequence.cc)
add_executable (test_llq_emplace llq_emplace.cc)

target_link_libraries (test_llq_empty ilias_async)
target_link_libraries (test_llq_pushback ilias_async)
target_link_libraries (test_llq_pushfront ilias_async)
target_link_libraries (test_llq_sequence ilias_async)
target_link_libraries (test_llq_frontsequence ilias_async)
target_link_libraries (test_llq_emplace ilias_async)

add_test (test_llq_empty test_llq_empty)
add_test (test_llq_pushback test_llq_pushback)
add_test (test_llq_pushfront test_llq_pushfront)
add_test (test_llq_sequence test_llq_sequence)
add_test (test_llq_frontsequence test_llq_frontsequence)
add_test (test_llq_emplace test_llq_emplace)
